@@ -8,6 +8,7 @@ export(extractDC)
 export(extractGeary)
 export(extractMoran)
 export(extractMoreauBroto)
+export(extractPAAC)
 export(extractQSO)
 export(extractSOCN)
 export(extractTC)
