@@ -47,7 +47,7 @@
 extractQSO = function (x, nlag = 30, w = 0.1) {
   
   N = nchar(x)
-  if (N < nlag) stop("Length of the protein sequence must be larger than 'nlag'")
+  if (N < nlag) stop("Length of the protein sequence must be no less than 'nlag'")
   
   DistMat1 = read.csv(system.file('Schneider-Wrede.csv', package = 'rdpi'), header = TRUE)
   DistMat2 = read.csv(system.file('Grantham.csv', package = 'rdpi'), header = TRUE)
